# solar-picker

./: .dockerignore  README.md  fly.back.toml  fly.front.toml  run.sh
backend/: .gitignore  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/model/: hmax.py
backend/src/static/: hmax_overall.nc
docker/: Dockerfile  supervisord.conf
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json
frontend/app/: main.js
frontend/assets/: main.css
notebook/: .gitignore  eda.ipynb  summarize_hmax.py
