[project]
name = "solar-picker-b"
version = "0.0.1"
description = "Backend service for Solar Picker"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "xarray",
]

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = 'py311'
fixable = ["I"]
select = ["E", "F", "I"]

[tool.pylint]
max-line-length = 120
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "broad-exception-raised",
]
